# RAGFlow

./: .env  .gitignore  LICENSE  README.md  app.py  kb_state.json  pyproject.toml  requirements.txt  server.py
.github/workflows/: ci.yml
chroma_db/: chroma.sqlite3
chroma_db_web/: chroma.sqlite3
legacy/: main.py  main_backup.py  main_v1.py  test.txt
src/: config.py  llm.py  loaders.py  pdf_ingestion.py  prompts.py  retrieval.py
templates/: index.html
