[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ragflow"
version = "1.0.0"
description = "Local PDF Knowledge Base Q&A System using RAG with HyDE retrieval"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.5.0",
    "sentence-transformers>=5.6.0",
    "pypdf>=6.14.0",
    "python-dotenv>=1.2.0",
    "openai>=2.44.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "python-multipart>=0.0.12",
    "pyngrok>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
